syntax = "proto3";

option csharp_namespace = "Web.InternalApi";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package artist;

// The greeting service definition.
service ArtistEnrichment {
  rpc AddMissingArtistImages (ArtistRequest) returns (ArtistReply);
  rpc AddArtistImageToCache (AddedArtistImage) returns (google.protobuf.Empty);

  rpc AddArtistToPlays (PlayWithoutArtistRequest) returns (PlayWithArtistReply);
}

message ArtistRequest {
  repeated ArtistWithImage artists = 1;
}

message ArtistWithImage {
  string artistName = 1;
  string artistImageUrl = 2;
}

message ArtistReply {
  repeated ArtistWithImage artists = 1;
}

message AddedArtistImage {
  string artistName = 1;
  string artistImageUrl = 2;
}

message PlayWithoutArtistRequest {
  repeated PlayWithoutArtist plays = 1;
}

message PlayWithoutArtist {
  string albumName = 1;
  string trackName = 2;
  string artistName = 3;
  int64 msPlayed = 4;
  int64 mediaLength = 5;
  google.protobuf.Timestamp ts = 6;
}

message PlayWithArtistReply {
  repeated PlayWithoutArtist plays = 1;
  int32 artistFound = 2;
  int32 artistNotFound = 3;
}
